dataset1235/2025-2/805158916/users/2200760145/executions/3435325918_3974737893.log
== SUBMISSION (2025-09-03 15:02:36)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)
print(quociente_da_divisao_inteira)

if(numero_inteiro / divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:50:30)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro / divisor)
if(x  / y):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x  / y):
       ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x  / y):
       ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x  / y):
       ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x  / y):
       ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x  / y):
       ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x  / y):
       ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:11:37)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:04:03)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)
print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == 0):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:07:57)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x % y)
resto_da_divisao = (quociente_da_divisao_inteira // y)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == divisor):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(quociente_da_divisao_inteira == divisor):
                                       ^^^^^^^
NameError: name 'divisor' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(quociente_da_divisao_inteira == divisor):
                                       ^^^^^^^
NameError: name 'divisor' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(quociente_da_divisao_inteira == divisor):
                                       ^^^^^^^
NameError: name 'divisor' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(quociente_da_divisao_inteira == divisor):
                                       ^^^^^^^
NameError: name 'divisor' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(quociente_da_divisao_inteira == divisor):
                                       ^^^^^^^
NameError: name 'divisor' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(quociente_da_divisao_inteira == divisor):
                                       ^^^^^^^
NameError: name 'divisor' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:00:11)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)
print(quociente_da_divisao_inteira)

if():
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:17:43)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:19:03)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(x % y):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:05:22)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == divisor):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:25:45)
-- CODE: 
x = int(input())
y = int(input())

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao )
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:20:22)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao )
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:05:31)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))

quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == divisor):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:28:07)
-- CODE: 
x = int(input())
y = int(input())

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (x % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao )
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:11:03)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(quociente_da_divisao_inteira == y):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:50:05)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (x / y)
if(x  / y):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:47:44)
-- CODE: 
numero_inteiro = int(input())
print(numero_inteiro)
quociente_da_divisao_inteira = (x / y)
if(x  / y):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:08:10)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x % y)
resto_da_divisao = (quociente_da_divisao_inteira // y)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == y):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:56:32)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro // divisor)

print(quociente_da_divisao_inteira)

if():
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:49:55)
-- CODE: 
numero_inteiro = int(input("x"))
divisor = int(input("y"))
quociente_da_divisao_inteira = (x / y)
if(x  / y):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente_da_divisao_inteira = (x / y)
                                    ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:15:04)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:51:54)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro / divisor)

print(quociente_da_divisao_inteira)
if(quociente_da_divisao_inteira  / divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:54:30)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro / divisor)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira % divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:04:26)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)
print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:05:33)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))

quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == divisor):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:51:39)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro / divisor)

print(quociente_da_divisao_inteira)
if(quociente_da_divisao_inteira  / divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:55:39)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro // divisor)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira % divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:57:28)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro // divisor)

print(quociente_da_divisao_inteira)

if():
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:05:04)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))

quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)
print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == divisor):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:19:59)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao % 0)
  print("nao")
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(resto_da_divisao % 0)
          ~~~~~~~~~~~~~~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(resto_da_divisao % 0)
          ~~~~~~~~~~~~~~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(resto_da_divisao % 0)
          ~~~~~~~~~~~~~~~~~^~~
ZeroDivisionError: integer modulo by zero
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:51:31)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro / divisor)
print(quociente_da_divisao_inteira)
if(quociente_da_divisao_inteira  / divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:20:11)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao == 0)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:55:06)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro / divisor)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira // divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:13:15)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:42:53)
-- CODE: 
numero_inteir = int(input())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
None
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
None
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
None
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
None
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
None
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:10:13)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)

print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == y):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:50:48)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro / divisor)
if(quociente_da_divisao_inteira  / divisor):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
sim
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
sim
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:19:35)
-- CODE: 
x = int(input(""))
y = int(input(""))

quociente_da_divisao_inteira = (x // y)
resto_da_divisao = (quociente_da_divisao_inteira % y)


if(resto_da_divisao == 0):
  print(quociente_da_divisao_inteira)
  print("sim")
else:
  print(resto_da_divisao)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:04:13)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)
print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == 0):
  print("sim")
else:
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 15:04:47)
-- CODE: 
numero_inteiro = int(input(""))
divisor = int(input(""))
quociente_da_divisao_inteira = (numero_inteiro % divisor)
resto_da_divisao = (quociente_da_divisao_inteira // divisor)
print(quociente_da_divisao_inteira)

if(quociente_da_divisao_inteira == divisor):
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
nao
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
nao
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
nao
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
